--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "test:full": "npm run spellcheck && virmator format check"
     },
     "dependencies": {
-        "@dfinity/agent": "^0.10.2",
+        "@dfinity/agent": "^0.9.3",
+        "@dfinity/principal": "^0.9.3",
         "@emotion/react": "^11.7.1",
         "@emotion/styled": "^11.6.0",
         "@psychedelic/dab-js": "^0.4.4",
@@ -18,6 +19,7 @@
         "bootstrap": "^5.1.3",
         "browserify": "^17.0.0",
         "buffer": "^6.0.3",
+        "cross-fetch": "^3.1.4",
         "ic-stoic-identity": "^2.0.0",
         "react": "^17.0.2",
         "react-bootstrap": "^2.1.1",
