--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
         "browserify": "^17.0.0",
         "buffer": "^6.0.3",
         "cross-fetch": "^3.1.4",
+        "discord.js": "^13.6.0",
         "ic-stoic-identity": "^2.0.0",
         "react": "^17.0.2",
         "react-bootstrap": "^2.1.1",
         "react-dom": "^17.0.2",
         "react-icons": "^4.3.1",
+        "react-lazy-load-image-component": "^1.5.1",
         "react-notifications": "^1.7.3",
         "react-router-dom": "^6.2.1",
         "storeon": "^3.1.4",
