--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
         "@psychedelic/dab-js": "^0.4.4",
         "@vitejs/plugin-react": "^1.1.4",
         "@vitejs/plugin-react-refresh": "^1.3.6",
+        "axios": "^0.25.0",
+        "bignumber.js": "^9.0.2",
         "bootstrap": "^5.1.3",
         "browserify": "^17.0.0",
         "buffer": "^6.0.3",
         "cross-fetch": "^3.1.4",
         "discord.js": "^13.6.0",
         "ic-stoic-identity": "^2.0.0",
+        "json-bigint": "^1.0.0",
         "react": "^17.0.2",
         "react-bootstrap": "^2.1.1",
         "react-dom": "^17.0.2",
