--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "cross-fetch": "^3.1.4",
         "ic-stoic-identity": "^2.0.0",
         "json-bigint": "^1.0.0",
+        "lodash": "^4.17.21",
         "react": "^17.0.2",
         "react-bootstrap": "^2.1.1",
         "react-dom": "^17.0.2",
