--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "spellcheck": "virmator spellcheck",
         "run": "npm install && react-scripts start",
         "start": "vite --force --config ./vite/config.ts",
+        "build": "vite build --config ./vite/config.ts",
         "test:full": "npm run spellcheck && virmator format check"
     },
     "dependencies": {
@@ -14,6 +15,7 @@
         "@emotion/react": "^11.7.1",
         "@emotion/styled": "^11.6.0",
         "@psychedelic/dab-js": "^0.4.4",
+        "@psychedelic/plug-controller": "^0.14.3",
         "@vitejs/plugin-react": "^1.1.4",
         "@vitejs/plugin-react-refresh": "^1.3.6",
         "axios": "^0.25.0",
