--- a/package.json
+++ b/package.json
@@ -3,17 +3,41 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.16.7",
+    "@dfinity/agent": "^0.9.3",
+    "@dfinity/principal": "^0.9.3",
+    "@psychedelic/dab-js": "^0.4.4",
+    "@psychedelic/plug-controller": "^0.14.3",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.25.0",
+    "bignumber.js": "^9.0.2",
+    "bootstrap": "^5.1.3",
+    "browserify": "^17.0.0",
+    "buffer": "^6.0.3",
+    "cross-fetch": "^3.1.4",
+    "ic-stoic-identity": "^2.0.0",
+    "json-bigint": "^1.0.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
+    "react-notifications": "^1.7.3",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "storeon": "^3.1.4",
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.68.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.3",
+    "webpack-notifier": "^1.15.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "dev": "webpack --config webpack.client.js --mode development",
+    "build": "webpack --config webpack.client.js --mode production",
+    "watch": "webpack-dev-server --config webpack.client.js --mode development",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -34,5 +58,24 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.16.12",
+    "@babel/plugin-transform-runtime": "^7.16.10",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.3",
+    "babel-polyfill": "^6.26.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "crypto-browserify": "^3.12.0",
+    "css-loader": "^6.5.1",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "sass": "^1.49.4",
+    "sass-loader": "^12.4.0",
+    "stream-browserify": "^3.0.0",
+    "style-loader": "^3.3.1",
+    "uglifyjs-webpack-plugin": "^2.2.0"
   }
 }
