--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
     "react-notifications": "^1.7.3",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "5.2.0",
     "react-scripts": "5.0.0",
     "storeon": "^3.1.4",
     "web-vitals": "^2.1.4",
@@ -72,10 +72,11 @@
     "css-loader": "^6.5.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.5.3",
     "sass": "^1.49.4",
     "sass-loader": "^12.4.0",
     "stream-browserify": "^3.0.0",
     "style-loader": "^3.3.1",
-    "uglifyjs-webpack-plugin": "^2.2.0"
+    "terser-webpack-plugin": "^5.3.1"
   }
 }
